syntax = "proto3";

package definitions;

import "gogoproto/gogo.proto";

option go_package = "github.com/grafana/loki/v3/pkg/querier/queryrange/queryrangebase/definitions";
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;

message PrometheusRequestHeader {
  string Name = 1 [(gogoproto.jsontag) = "-"];
  repeated string Values = 2 [(gogoproto.jsontag) = "-"];
}

message PrometheusResponseHeader {
  string Name = 1 [(gogoproto.jsontag) = "-"];
  repeated string Values = 2 [(gogoproto.jsontag) = "-"];
}
